--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: lowlighter/metrics@latest
+      - uses: gh-metrics/metrics@ed2a678f6e559135c1c3739454857b4a622f32e4 # lowlighter/metrics@latest
         with:
           # Your GitHub token
           # The following scopes are required:
