--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -5,7 +5,8 @@ on:
   schedule: [{cron: "0 10 * * *"}]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
-  push: {branches: ["master", "main"]}
+  push:
+    paths: .github/workflows/*
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
